Adjusted mcut path

--- a/src_cc/Makefile.am
+++ b/src_cc/Makefile.am
@@ -1,6 +1,7 @@
-installdir = /usr/bin/
+installdir = /usr/lib/enigma2/python/Plugins/Extensions/MovieCut/bin/
 
 bin_PROGRAMS = mcut
 
 mcut_SOURCES = mcut.cc
 
+install_PYTHON = mcut
