replace cvs -> git in control files

--- a/CONTROL/control
+++ b/CONTROL/control
@@ -5,4 +5,4 @@ Section: extra
 Priority: optional
 Architecture: mipsel
 Maintainer: Anders Holst <aho@sics.se>
-Depends: enigma2(>2.5cvs20081101)
+Depends: enigma2(>2.5git20081101)
