update build scripts

--- a/src_cc/Makefile.am
+++ b/src_cc/Makefile.am
@@ -1,7 +1,5 @@
-installdir = /usr/lib/enigma2/python/Plugins/Extensions/MovieCut/bin/
+pluginexecdir = $(libdir)/enigma2/python/Plugins/Extensions/MovieCut/bin
 
-bin_PROGRAMS = mcut
+pluginexec_PROGRAMS = mcut
 
 mcut_SOURCES = mcut.cc
-
-install_DATA = mcut
