--- a/src_py/Makefile.am
+++ b/src_py/Makefile.am
@@ -1,3 +1,3 @@
-installdir = /usr/lib/enigma2/python/Plugins/Extensions/MovieCut
+installdir = $(libdir)/enigma2/python/Plugins/Extensions/MovieCut
 
 install_PYTHON = __init__.py plugin.py maintainer.info
