--- a/CONTROL/control
+++ b/CONTROL/control
@@ -2,4 +2,4 @@ Package: enigma2-plugin-extensions-moviecut
 Version: 1.4-20120226
 Description: Perform the cuts specified with the Cutlist editor
 Maintainer: Anders Holst <aho@sics.se>
-Depends: enigma2 (>= 2.6git20101125)
+Depends: enigma2
